Fri Apr 06 09:03:19 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.1 released.

Mon Mar 26 10:46:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4009_Regression/Bug_4009_Bar.mpc:
          Fixed windows link issues

Fri Mar 23 22:04:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4009_Regression/Bug_4009_Foo.idl:
          Forgot to commit this last version

Fri Mar 23 21:58:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.doxygen:
          Parse more files

        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
          Added some documentation to be copied by doxygen to the
          executor header

Fri Mar 23 20:34:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4009_Regression/Bug_4009_Bar.idl:
        * tests/Bug_4009_Regression/Bug_4009_Bar.mpc:
        * tests/Bug_4009_Regression/Bug_4009_Foo.idl:
          Extended this test with much more typedefs

Fri Mar 23 20:24:42 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4009_Regression/Bug_4009_Bar.idl:
        * tests/Bug_4009_Regression/Bug_4009_Bar.mpc:
        * tests/Bug_4009_Regression/Bug_4009_Foo.idl:
        * tests/Bug_4009_Regression/Bug_4009_Foo.mpc:
          New unit test for bugzilla 4009, uncovers a bug when generating
          the CIAO executor

Fri Mar 23 19:39:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
          Added a component with a sequence type as attribute

Wed Mar 21 01:35:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/SyncPortConn/Sender/Hello_Sender_exec.cpp:
          Fixed compile error

Wed Mar 21 01:30:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/NoReplyH/Receiver/NoReplyH_Receiver_exec.cpp:
          Fixed coverity errors
