@@ -212,7 +212,9 @@ namespace CIAO_InterReturnT_Sender_Impl
    */
 
   Sender_exec_i::Sender_exec_i (void)
-  : nr_of_received_(0)
+  : asynch_foo_gen (0),
+    synch_foo_gen (0),
+    nr_of_received_(0)
   {
   }
 
