@@ -157,7 +157,10 @@ namespace CIAO_Hello_Sender_comp_Impl
   //============================================================
   // Component Executor Implementation Class: Sender_comp_exec_i
   //============================================================
-  Sender_comp_exec_i::Sender_comp_exec_i (void){
+  Sender_comp_exec_i::Sender_comp_exec_i (void) :
+    asynch_foo_gen (0),
+    synch_foo_gen (0)
+  {
   }
 
   Sender_comp_exec_i::~Sender_comp_exec_i (void)
